# flask-epl

./: .env  README.md  main.py  pyproject.toml  requirements.ext
.github/: copilot-instructions.md
epl/: __init__.py  models.py  routes.py
epl/clubs/: routes.py
epl/clubs/templates/clubs/: index.html  info_club.html  search_club.html
epl/core/: routes.py
epl/players/: reutes.py
epl/players/templates/players/: index.html  info_player.html  new_player.html  search_player.html  update_player.html
epl/templates/clubs/: info_club.html  new_club.html  search_club.html  update_club.html
epl/templates/players/: index.html  info_player.html  new_player.html  search_player.html
